# whatsmeow-rs

./: .gitignore  .gitmodules  Cargo.toml  DEVELOPMENT_CONTEXT.md  README.md  build.rs  test.proto
src/: auth_old.rs  client.rs  error.rs  lib.rs  main.rs  messaging.rs
src/appstate/: chat_metadata.rs  contacts.rs  mod.rs  settings.rs  state_manager.rs  sync_protocol.rs
src/auth/: device.rs  mod.rs  multidevice.rs  pairing.rs  qr.rs  session.rs
src/binary/: decoder.rs  encoder.rs  mod.rs  node.rs  token.rs  token_test.rs
src/connection/: manager.rs  mod.rs  rate_limit.rs  retry.rs
src/database/: migrations.rs  mod.rs  pool.rs  schema.rs  sqlite.rs
src/group/: announcement.rs  community.rs  disappearing.rs  manager.rs  metadata.rs  mod.rs  participants.rs  permissions.rs  types.rs
src/media/: download.rs  encryption.rs  mod.rs  processing.rs  types.rs  upload.rs
src/proto/: mod.rs  utils.rs
src/signal/: group.rs  identity.rs  mod.rs  prekey.rs  session.rs
src/socket/: mod.rs  noise.rs
src/store/: mod.rs
src/types/: events.rs  jid.rs  jid_test.rs  message.rs  mod.rs
src/util/: crypto.rs  crypto_test.rs  keys.rs  keys_test.rs  mod.rs
tests/: integration_tests.rs
