[package]
name = "whatsmeow"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
prost = "0.12"
prost-types = "0.12"
bytes = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
ring = "0.17"
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
curve25519-dalek = "4.0"
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"
base64 = "0.21"
hex = "0.4"
url = "2.0"
async-trait = "0.1"
once_cell = "1.0"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
