[package]
name = "whatsmeow"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.46", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
prost = "0.13"
prost-types = "0.13"
bytes = "1.8"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
ring = "0.17"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
x25519-dalek = "2.0"
curve25519-dalek = "4.1"
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"
url = "2.5"
async-trait = "0.1"
once_cell = "1.20"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
flate2 = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.20"
